# HyLoRD

./: .clang-format  .clang-tidy  .clangd  .gitignore  BUILD.md  CMakeLists.txt  Makefile  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yaml  config.yml  documentation-report.yaml  suggestion-report.yaml
.github/workflows/: build.yml  docs.yml  test.yml
docs/: Doxyfile  doxyfile.cmake  header.html  hylord-doxygen-header.html  hylord-doxygen-stylesheet.css  style.css
docs/high-level-docs/: deconvolution-algorithm.md  inputs-outputs.md  qpp-derivation.md
src/: BedData.hpp  BedRecords.cpp  BedRecords.hpp  HylordException.hpp  TSVFileReader.hpp  cli.cpp  cli.hpp  concepts.hpp  hylord.hpp  main.cpp  types.hpp
src/core/: Deconvolver.cpp  Deconvolver.hpp  hylord.cpp  hylord.hpp
src/data/: BedData.cpp  BedData.hpp  BedRecords.cpp  BedRecords.hpp  DataProcessing.cpp  DataProcessing.hpp  Filters.cpp  Filters.hpp  LinearAlgebra.cpp  LinearAlgebra.hpp  MatrixManipulation.cpp  MatrixManipulation.hpp
src/io/: FileDescriptor.cpp  FileDescriptor.hpp  MemoryMap.cpp  MemoryMap.hpp  TSVFileReader.hpp  writeMetrics.cpp  writeMetrics.hpp
src/maths/: LinearAlgebra.cpp  LinearAlgebra.hpp  percentage.hpp
src/random/: rng.hpp
test/: CMakeLists.txt  README.md
test/integration/: TSVFileReaderTest.cpp
test/integration/test_data/valid/: empty_lines.tsv  malformed_lines.tsv  row_filter.tsv
test/unit/: FileWritingTest.cpp  FilterCombinerTest.cpp  IndexOverlappingTest.cpp  PercentageProportionConversionTest.cpp  RecordParsingTest.cpp
